--- a/src/Skoruba.IdentityServer4.STS.Identity/appsettings.json
+++ b/src/Skoruba.IdentityServer4.STS.Identity/appsettings.json
@@ -9,25 +9,7 @@
     "ProviderType": "SqlServer"
   },
   "CertificateConfiguration": {
-
-    "UseTemporarySigningKeyForDevelopment": true,
-
-    "CertificateStoreLocation": "LocalMachine",
-    "CertificateValidOnly": true,
-
-    "UseSigningCertificateThumbprint": false,
-    "SigningCertificateThumbprint": "",
-
-    "UseSigningCertificatePfxFile": false,
-    "SigningCertificatePfxFilePath": "",
-    "SigningCertificatePfxFilePassword": "",
-
-    "UseValidationCertificatePfxFile": false,
-    "ValidationCertificatePfxFilePath": "",
-    "ValidationCertificatePfxFilePassword": "",
-
-    "UseValidationCertificateThumbprint": false,
-    "ValidationCertificateThumbprint": ""
+    "UseTemporarySigningKeyForDevelopment": true
   },
   "RegisterConfiguration": {
     "Enabled": true
@@ -51,7 +33,7 @@
     "ResolutionPolicy": "Username"
   },
   "AdminConfiguration": {
-    "PageTitle": "Skoruba IdentityServer4",
+    "PageTitle": "OpenReservation IdentityServer4",
     "HomePageLogoUri": "/images/skoruba-icon.png",
     "FaviconUri": "/favicon.ico",
     "IdentityAdminBaseUrl": "http://localhost:9000",
@@ -62,6 +44,6 @@
     "DefaultCulture": null
   },
   "AdvancedConfiguration": {
-    "PublicOrigin":  ""
+    "PublicOrigin": ""
   }
 }
