update identity-admin docker & k8s deploy [skip ci]

--- a/src/Skoruba.IdentityServer4.Admin/appsettings.json
+++ b/src/Skoruba.IdentityServer4.Admin/appsettings.json
@@ -11,7 +11,7 @@
     "ProviderType": "SqlServer"
   },
   "AdminConfiguration": {
-    "PageTitle": "Skoruba IdentityServer4 Admin",
+    "PageTitle": "IdentityServer4 Admin",
     "FaviconUri": "/favicon.ico",
     "IdentityAdminRedirectUri": "http://localhost:9000/signin-oidc",
     "IdentityServerBaseUrl": "http://localhost:5000",
