--- a/src/Skoruba.IdentityServer4.Admin/k8s-deploy.yaml
+++ b/src/Skoruba.IdentityServer4.Admin/k8s-deploy.yaml
@@ -35,7 +35,7 @@ spec:
             - containerPort: 80
           volumeMounts:
           - name: settings
-            mountPath: /app/appsettings.Production.json
+            mountPath: /app/appsettings.json
             subPath: appsettings
 
       volumes:
