--- a/src/Skoruba.IdentityServer4.STS.Identity/appsettings.json
+++ b/src/Skoruba.IdentityServer4.STS.Identity/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "AppSettings": {
+    "Issuer": "https://id.weihanli.xyz"
+  },
   "ConnectionStrings": {
     "ConfigurationDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
     "PersistedGrantDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
@@ -44,6 +47,6 @@
     "DefaultCulture": null
   },
   "AdvancedConfiguration": {
-    "PublicOrigin": ""
+    "PublicOrigin": "https://id.weihanli.xyz"
   }
 }
